--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -28,3 +28,6 @@ button{
     margin-left: auto; /* this line shift the button to the right */
     margin-right: 30px;
 }
+button:hover{
+    opacity: 90%;
+}
