--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,107 +1,88 @@
-.places{
-    flex-direction: column;
-    padding-left: 1%; 
+.places h1{
+    font-size: 30px;
+    margin-bottom: 0px;
+    margin-left: 1.5%;
 }
 
-.place_title{
-    font-size: 20px;
-}
-
-.article_styling{
+.flex_me{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
-article{
+.flex_me article{
     width: 390px;
     padding: 20px;
-    border: 1px solid #FF5A5A;
-    border-radius: 4px; 
     margin: 20px;
-    text-align: center;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    justify-content: center;
     position: relative;
+    padding-top: 0px
 }
 
-.place_header{
+.places h2{
     font-size: 30px;
-    padding: 0px;
-    margin:0px; 
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    display: inline-block;
-    height: 80px
 }
 
-.places h1{
-    margin-bottom: 0px;
-}
-
-.price_by_night{
-    color: #FF5A5A;
-    border: 4px solid #FF5A5A;
-    border-radius: 100px;
-    font-size: 30px;
+.price_by_night h4{
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
+    border-radius: 50%;
     min-width: 60px;
     height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-    margin-right: 20px;
-    right: 0;
-    top: 0;
+    font-size: 30px;
     position: absolute;
+    top: 0;
+    right: 0;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-right: 15px;
+    margin-top: 15px;
+}
+
+.section_head{
+    margin-bottom: 30px;
 }
 
 .information{
     height: 80px;
     border-top: 1px solid #DDDDDD;
     border-bottom: 1px solid #DDDDDD;
-    display: inline-flex;
-    font-size: 14px;
-    width: 100%;
+    display: flex;
     justify-content: center;
-    gap: 40px;
+    align-items: center;
+    gap: 50px;
 }
 
 .max_guest::before{
     content: url("../images/icon_group.png");
+    align-items: center;
 }
 
 .number_rooms::before{
-    content: url("../images/icon_bed.png")
+    content: url("../images/icon_bed.png");
+    margin-left: 10px;
 }
 
 .number_bathrooms::before{
-    content: url("../images/icon_bath.png")
+    content: url("../images/icon_bath.png");
+    margin-left: 10px
 }
 
-.max_guest p, .number_bathrooms p, .number_rooms p{
-    margin: 0;
-    line-height: 1;
+.max_guest p, .number_rooms p, .number_bathrooms p{
+    padding-top: 0px;
+    margin-top: 0px;
+    line-height: 1px;
+
 }
 
-.max_guest, .number_rooms, .number_bathrooms{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.user, .user p{
-    justify-content: left;
-    flex-direction: row;
-    text-align: left;
-    line-height: 1.5;
-}
-
-.description p{
-    text-align: left;
+.description{
     line-height: 1.5;
 }
 
 .empty{
-    height: 80px;
+    height: 60px;
 }
