--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,12 +1,12 @@
 footer{
-    background-color: white;
+    background-color:#FFFFFF;
     height: 60px;
     width: 100%;
+    line-height: 30px;
     position: fixed;
     bottom: 0;
-    border-top: 1px solid #CCCCCC;
+    border-top:1px solid #CCCCCC;
 }
-p{
+.foot_style{
     text-align: center;
-    line-height: 30px;
 }
