--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,33 +1,22 @@
-.container{
-    max-width: 1000px;
-    padding-top: 30px;
-    margin-bottom: 30px;
-    /* display: flex; */
-    justify-content: center;
-    /* align-items: center; */
-    margin: 0 auto;
-}
-
 .filters{
-    background-color: white;
-    height:70px;
-    width:100%;
+    height: 70px;
+    width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
-button{
+.filters button{
     font-size: 18px;
     background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
+    color: white;
+    height:48px;
     width: 20%;
-    border: none;
+    border:none;
     border-radius: 4px;
-    margin-left: auto; /* this line shift the button to the right */
+    margin-left: auto;
     margin-right: 30px;
 }
 
@@ -35,61 +24,47 @@ button:hover{
     opacity: 90%;
 }
 
+.locations, .amenities{
+    height: 100%;
+    width: 25%;
+}
+
 .locations{
     border-right: 1px solid #DDDDDD;
 }
 
-.locations, .amenities{
-    width: 25%;
-    height: 100%; 
-    
+.locations h3, .amenities h3{
+    font-weight: 600;
+    margin-bottom: 0px;
+    padding-left: 30px;
 }
 
-.amenities h4{
-    font-weight: 400;
-    font-size: 14px; 
-    margin-top: 0px;
-}
-
-.locations h4{
+.locations h4, .amenities h4{
     font-weight: 400;
     font-size: 14px;
     margin-top: 0px;
-    
-}
-
-.amenities h3{
-    font-weight: 600;
-    margin-bottom: 0px;
-}
-
-.locations h3{
-    font-weight: 600;
-    margin-bottom: 0px;
+    padding-left: 30px;
 }
 
 .popover{
-    display: none;
-    border: 1px solid #DDDDDD;
+    display:none;
     background-color: #FAFAFA;
-}
-
-.locations:hover .popover, .amenities:hover .popover{
-    display: block;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
     position: relative;
     z-index: 1;
 }
 
-h3, h4{
-    margin-left: 30px;
-}
-
-h2{
-    padding-left: 10px;
-    margin-bottom: 0px;
-}
-
-ul{
+.popover ul{
     list-style: none;
+    padding-inline-start: 30px;
     line-height: 1.5em;
+}
+
+.amenities:hover .popover, .locations:hover .popover{
+    display: block;
+}
+
+.popover h2{
+    padding-left: 15px;
 }
