--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,29 +1,27 @@
-.places{
+.places h1{
     font-size: 30px;
-    padding-left: 1%;
+    margin-bottom: 0px;
+    margin-left: 1.5%;
 }
 
-.article_styling{
+.flex_me{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
-article{
+.flex_me article{
     width: 390px;
     padding: 20px;
-    border: 1px solid #FF5A5A;
-    border-radius: 4px; 
     margin: 20px;
-    text-align: center;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    justify-content: center;
+    position: relative;
+    padding-top: 0px
 }
 
-article h2{
+.places h2{
     font-size: 30px;
-    padding: 0px;
-    margin:0px;
-}
-
-.places h1{
-    margin-bottom: 0px;
+    text-align: center;
 }
